--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -215,7 +215,7 @@
                 <div class="task-section">
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80" style="min-height:80px">
-                            <div class="semi-fixed-left text-center">
+                            <div class="semi-fixed-left text-center circle icon-70">
                                 <img ng-src="{{staticImageUrl + user.avatar || '../images/avatar.png'}}" width="70px" alt="" err-src="../images/avatar_1.png">
                             </div>
                             <div style="padding-bottom:8px;">
