--- a/src/templates/wallet.html
+++ b/src/templates/wallet.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" style="position:relative;top:8px">
-                        {{"Account Balance" | translate}}
+                        {{"Account Balance" | translate}}[{{wallet.currency_type}}]
                         <div class="text-very-large text-primary">{{wallet.money | currency:""}}</div>
                     </h4>
                 </div>
