--- a/src/less/index.less
+++ b/src/less/index.less
@@ -10,6 +10,10 @@
         width: 150px;
         height: 150px;
     }
+    &.avatar-small {
+        width: 70px;
+        height: 70px
+    }
     img {
         width: 100%;
     }
@@ -393,7 +397,7 @@
         display: block;
         float: left;
         width: 50%;
-        height: 114px;
+        height: 156px;
         overflow: auto;
         -webkit-overflow-scrolling: touch;
     }
