--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -11,22 +11,22 @@
                 <div class="recommand-header">
                     {{applicant.nickname}} <i class="kk kk-icon" ng-class="{'kk-male':applicant.gender=='1','kk-female':applicant.gender !='1'}"></i>
                 </div>
-                <div class="recommand-body">
+                <div class="recommand-body" ng-click="preview_translator(applicant.user_id)">
                     <div>{{"Language" | translate}}：{{applicant.return_language}}</div>
                     <p>{{"Place" | translate}}：{{applicant.address}}</p>
                     <p>{{"Profile" | translate}}：{{applicant.introduction}}</p>
                     <p ng-if="applicant.contact_request_status == '1'">{{applicant.contact_request}}</p>
                     <div class="clearfix">
                         <div class="pull-left">
-                            <a ng-click="like(applicant)" class="btn btn-default" ng-if="applicant.is_collect == '0'">
+                            <a ng-click="like(applicant,$event)" class="btn btn-default" ng-if="applicant.is_collect == '0'">
                                 <i class="kk kk-like"></i> {{"Follow" | translate}}
                             </a>
-                            <a ng-click="unlike(applicant)" class="btn btn-default" ng-if="applicant.is_collect == '1'">
+                            <a ng-click="unlike(applicant,$event)" class="btn btn-default" ng-if="applicant.is_collect == '1'">
                                 <i class="kk kk-like active"></i> {{"Followed" | translate}}
                             </a>
                         </div>
                         <div class="pull-right">
-                            <a ng-click="accept(applicant)" class="btn btn-default">
+                            <a ng-click="accept(applicant,$event)" class="btn btn-default">
                                 <i class="kk kk-accept" ng-class="{'active':applicant.status == '1'}"></i> {{applicant.status_message}}
                             </a>
                         </div>
@@ -59,111 +59,3 @@
     <input type="hidden" name="sign" value="{{alipay.sign}}">
     <input type="hidden" name="sign_type" value="{{alipay.sign_type}}">
 </form>
-<div ui-content-for="modals">
-    <div class="modal modal-overlay" ui-if="payment_panel" ui-state='payment_panel'>
-        <form name="paymentForm" ng-submit="ajaxForm()" class="modal-dialog" style="margin:0">
-            <div class="modal-content">
-                <div class="modal-header bg-primary clearfix">
-                    <div class="pull-left section section-condensed bg-transparent" style="position:absolute" ui-turn-off="payment_panel">
-                        <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
-                    </div>
-                    <h4 class="modal-title text-center">{{"Payment" | translate}}</h4>
-                    <div class="section bg-transparent text-center">
-                        <p>{{"Going to Pay" | translate}}</p>
-                        <span class="text-very-large">{{payment_money.price_sign}}{{payment_money.total_money | currency:""}}</span>
-                    </div>
-                </div>
-                <div class="modal-body" style="padding:0;">
-                    <div class="section">
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="circle icon-70">
-                                    <img class="media-object block full-width" ng-src="{{staticImageUrl + payment_user.avatar || '../images/avatar.png'}}" err-src="../images/avatar_1.png" alt="">
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading text-ellipsis">{{payment_user.nickname}}</h4>
-                                <div>{{"Language" | translate}}：{{payment_user.return_language}}</div>
-                                <div>{{"Place" | translate}}：{{payment_user.address}}</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section large bg-gray-lighter text-primary clearfix">
-                        {{"Pay by Balance" | translate}}
-                        <span class="pull-right">
-                            <span class="switch switch-transition-enabled" ng-class="{'active':payway.balance}" ng-click="togglePayway()">
-                                <span class="switch-handle"></span>
-                        </span>
-                        </span>
-                    </div>
-                    <div class="section large">
-                        {{"Balance Available is" | translate}} <span class="text-primary">{{payment_money.price_sign}}{{payment_money.current_money |currency:""}}</span>
-                    </div>
-                    <div class="section large bg-gray-lighter text-primary clearfix">
-                        {{"Payment Method" | translate}}
-                        <span class="pull-right">
-                            <span class="switch switch-transition-enabled" ng-class="{'active':!payway.balance}" ng-click="togglePayway()">
-                                <span class="switch-handle"></span>
-                        </span>
-                        </span>
-                    </div>
-                    <div class="list-group">
-                        <label class="list-group-item">
-                            {{"Unionpay" | translate}}
-                            <input type="radio" class="hidden" ng-model="payway.channel" value="yinlian">
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':(payway.channel == 'yinlian' && !payway.balance)}"></i>
-                        </label>
-                        <label class="list-group-item">
-                            {{"WeChat" | translate}}
-                            <input type="radio" class="hidden" ng-model="payway.channel" value="weixin">
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':(payway.channel == 'weixin' && !payway.balance)}"></i>
-                        </label>
-                        <label class="list-group-item">
-                            {{"AliPay" | translate}}
-                            <input type="radio" class="hidden" ng-model="payway.channel" value="alipay">
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':(payway.channel == 'alipay' && !payway.balance)}"></i>
-                        </label>
-                    </div>
-                    <div class="section text-center">
-                        <button type="submit" class="btn btn-primary" ng-disabled="paymentForm.edit.$invalid">
-                            <span ng-if="wallet.is_setPayPwd == 0">{{"Please Set Transaction Password First" | translate}}</span>
-                            <span ng-if="wallet.is_setPayPwd == 1">{{"Confirm" | translate}}</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </form>
-        <!-- toast tip -->
-        <div class="toast" ui-if="toast_state" style="z-index:5000">
-            <span class="loader"></span>
-        </div>
-        <!-- error tip -->
-        <div class="error-msg section section-warning text-center" ui-if="error_state">{{ errormsg }}</div>
-    </div>
-    <div class="modal" ui-if="password_panel" ui-state='password_panel' style="z-index:5000">
-        <div class="modal-backdrop in"></div>
-        <div class="modal-dialog" style="margin-top:10%;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button class="close text-primary" ui-turn-off="password_panel">&times;</button>
-                    <h4 class="modal-title text-center">{{"Enter Transaction Password" | translate}}</h4>
-                </div>
-                <div class="modal-body">
-                    <span class="password-input">
-                        <input type="password" class="form-control" ng-model="input.password" focus-me="true">
-                        <span class="dot dot_{{$index}}" ng-repeat="d in imulate_password track by $index"></span>
-                    </span>
-                    <p class="text-primary text-center">{{input.error_message}}</p>
-                </div>
-                <div class="modal-footer text-center">
-                    <div class="btn-group justified">
-                        <a ui-turn-off="password_panel" class="btn btn-default">{{"Cancel" | translate}}</a>
-                        <a ng-click="ajaxForm()" ng-disabled="input.password == ''" class="btn btn-primary">{{"Confirm"|translate}}<i class="fa fa-refresh" ng-show="input.paying"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- error tip -->
-        <div class="error-msg section section-warning text-center" ui-if="error_state">{{ errormsg }}</div>
-    </div>
-</div>
