--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -174,7 +174,7 @@
                 <div class="task-section">
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80" style="min-height:80px">
-                            <div class="semi-fixed-left text-center">
+                            <div class="semi-fixed-left text-center circle icon-70">
                                 <img ng-src="{{staticImageUrl + user.avatar || '../images/avatar.png'}}" width="70px" alt="" err-src="../images/avatar_1.png">
                             </div>
                             <div style="padding-bottom:8px;">
@@ -256,7 +256,8 @@
                                 {{"Place" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
-                                {{choosen.city.country +","+choosen.city.name}}
+                                <!-- {{choosen.city.country +","+choosen.city.name}} -->
+                                {{choosen.city.name}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
                         </div>
