--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -1,7 +1,7 @@
 <div class="filter-cover" ng-click="reset_filter()"></div>
 <div class="category" style="top:{{offset_top}}">
     <div class="list-group">
-        <label class="list-group-item" ng-repeat="category in categories track by $index" ng-class="{'list-group-item-warning':category == choosen.category}">
+        <label class="list-group-item" ng-repeat="category in categories track by $index" ng-class="{'list-group-item-warning':category.name == choosen.category.name}">
             <input type="radio" class="hidden" ng-model="choosen.category" ng-value="category">
             {{category.name | translate}}
         </label>
