--- a/src/templates/comment.html
+++ b/src/templates/comment.html
@@ -15,6 +15,8 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">{{task.task_title}}</h4>
+                    <div class="kk-line kk-horizon bg-gray-lighter"></div>
+                    <div class="section section-wide">{{task.nickname}}</div>
                 </div>
             </div>
         </div>
