--- a/src/templates/recommands.html
+++ b/src/templates/recommands.html
@@ -11,22 +11,22 @@
                 <div class="recommand-header">
                     {{recommand.nickname}} <i class="kk kk-icon" ng-class="{'kk-male':recommand.gender=='1','kk-female':recommand.gender !='1'}"></i>
                 </div>
-                <div class="recommand-body">
+                <div class="recommand-body" ng-click="preview_translator(recommand.user_id)">
                     <div>{{"Language" | translate}}：{{recommand.return_language}}</div>
                     <p>{{"Place" | translate}}：{{recommand.address}}</p>
                     <p>{{"Profile" | translate}}：{{recommand.introduction}}</p>
                     <div class="clearfix">
                         <div class="pull-left">
-                            <a ng-click="like(recommand)" class="btn btn-default" ng-if="recommand.is_collect == '0'">
+                            <a ng-click="like(recommand,$event)" class="btn btn-default" ng-if="recommand.is_collect == '0'">
                                 <i class="kk kk-like"></i> {{"Follow" | translate}}
                             </a>
-                            <a ng-click="unlike(recommand)" class="btn btn-default" ng-if="recommand.is_collect == '1'">
+                            <a ng-click="unlike(recommand,$event)" class="btn btn-default" ng-if="recommand.is_collect == '1'">
                                 <i class="kk kk-like active"></i> {{"Followed" | translate}}
                             </a>
                         </div>
                         <div class="pull-right">
                             <!-- ng-href="#/apply_flow" -->
-                            <a ng-click="apply(recommand)" class="btn btn-default">
+                            <a ng-click="apply(recommand,$event)" class="btn btn-default">
                                 <i class="kk kk-accept" ng-class="{'active':recommand.status == '1'}"></i>
                                 {{recommand.apply_message}}
                             </a>
