--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -29,8 +29,9 @@
             </div>
         </div>
     </div>
-    <div class="scrollable-content">
-        <a ng-href="#/translators/{{translator.user_id}}" class="translator" ng-repeat="translator in translators track by $index">
+    <div class="scrollable-content" id="scrollable-content">
+        <!-- ng-href="#/translators/{{translator.user_id}}" -->
+        <a ng-click="routeTo(translator.user_id)" id="{{'translator_'+translator.user_id}}" class="translator" ng-repeat="translator in translators track by $index">
             <imageview data-rate="750/422" src="staticImageUrl+translator.bg_image"></imageview>
             <span class="translator-intro">
                 <span class="h3 block">
