add weixin share

--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -221,6 +221,13 @@
         background-image: url("../images/weixin_share.png");
         background-position: top right;
     }
+    &.kk-weixin-share-qrcode {
+        width: 100%;
+        height: 100%;
+        background-size: 80%;
+        background-image: url("../images/qrcode.jpg");
+        background-position: center center;
+    }
 }
 
 .btn-navbar {
